[package]
name = "github-latest"
version = "0.3.2"
edition = "2021"
description = "Get latest tag(s) for GitHub repositories"
repository = "https://github.com/qtfkwk/github-latest"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive", "wrap_help"] }
futures = "0.3.31"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
veg = "0.5.6"
