[package]
name = "github-latest"
version = "0.4.0"
edition = "2024"
description = "Get latest tag(s) for GitHub repositories"
repository = "https://github.com/qtfkwk/github-latest"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
futures = "0.3.31"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
veg = "0.6.0"
