[package]
name = "github-latest"
version = "0.4.3"
edition = "2024"
description = "Get latest tag(s) for GitHub repositories"
repository = "https://github.com/qtfkwk/github-latest"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
futures = "0.3.31"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
veg = "0.6.3"
